# sitemap-from-files

./: COPYRIGHT.md  Cargo.toml  Configuration.md  README.md
.github/workflows/: release.yml
src/: cmd.rs  config.rs  main.rs  rules.rs  scan.rs
src/scan/: check_html_meta.rs
test-data/: config.toml  expected-sitemap.xml
test-data/site/: bare_meta_robots.html  index.txt  meta_robots.html  robots.txt  something.else
test-data/site/foo/: bar.html
test-data/site/secret/: secrets.html
test-data/site/super-secret/: more-secrets.html
tests/: test.rs
