[package]
name = "sitemap-from-files"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["sitemap"]

[dependencies]
anyhow = "1.0.57"
chrono = "0.4"
clap = { version = "3.1.11", features = ["derive"] }
html5ever = "0.26.0"
markup5ever = "0.11.0"
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_regex = "1.1.0"
sitemap = "0.4.1"
texting_robots = "0.2.1"
toml = "0.5.9"
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
filetime = "0.2.16"
snapbox = { version = "0.2.9", features = ["path"] }
